--- a/timeout.cabal
+++ b/timeout.cabal
@@ -25,7 +25,7 @@ Library
 
   build-depends:
     base > 4.5 && < 5,
-    layers < 0.2,
+    layers > 0.1 && < 0.3,
     stm > 2.3 && < 2.5,
     transformers > 0.2 && < 0.4
 
