--- a/timeout.cabal
+++ b/timeout.cabal
@@ -24,10 +24,10 @@ Library
     Control.Monad.Trans.Timeout
 
   build-depends:
-    base > 4.5 && < 5,
-    layers > 0.1 && < 0.3,
-    stm > 2.3 && < 2.5,
-    transformers > 0.2 && < 0.4
+    base >= 4.3 && < 5,
+    layers >= 0.2 && < 0.3,
+    stm >= 2.2.0.1 && < 2.5,
+    transformers >= 0.2 && < 0.4
 
   ghc-options:
     -Wall
