--- a/timeout.cabal
+++ b/timeout.cabal
@@ -20,14 +20,21 @@ Library
     src
 
   exposed-modules:
-    Control.Monad.Interface.Timeout
+    Monad.Timeout
     Control.Monad.Trans.Timeout
 
   build-depends:
-    base >= 4.3 && < 5,
-    layers >= 0.2 && < 0.3,
+    base >= 4 && < 5,
+    layers >= 1.0 && < 1.1,
+    mmorph >= 1.0 && < 1.1,
     stm >= 2.2.0.1 && < 2.5,
     transformers >= 0.2 && < 0.4
 
   ghc-options:
     -Wall
+
+  if impl(ghc < 7)
+    cpp-options: -DINLINABLE=INLINE
+
+  if impl(ghc >= 7.4)
+    cpp-options: -DLANGUAGE_ConstraintKinds
